--- a/weatherApi.html
+++ b/weatherApi.html
@@ -33,7 +33,7 @@
         function searchLocationByName(e) {
             e.preventDefault();
             let locationName = document.getElementById('location').value;
-            let url = `http://api.openweathermap.org/geo/1.0/direct?q=${locationName}&limit=5&appid=${ApiKey}`;
+            let url = `https://api.openweathermap.org/geo/1.0/direct?q=${locationName}&limit=5&appid=${ApiKey}`;
             fetch(url)
         .then(res => res.json())
         .then(data => {
