--- a/weatherApi.html
+++ b/weatherApi.html
@@ -60,7 +60,7 @@
                     <tr>
                         <td>${element.country}</td>
                         <td>${element.name}</td>
-                        <td>${element.state || ''}</td>
+                        <td>${element.state || 'NIL'}</td>
                         <td><button class="btn btn-info" onclick="showWeather('${element.lat}', '${element.lon}')">Show</button></td>
                     </tr>
                 `;
@@ -75,7 +75,7 @@
             fetch(url)
         .then(res => res.json())
         .then(data => {
-            console.log("Weather Data:", data);
+            // console.log("Weather Data:", data);
             viewWeather.innerHTML = `
                 <div class="w-100  border shadow rounded-5 bg-white p-3" style="border-radius: 25px;">
             <h3 class="text-center border-bottom p-2">View Weather</h3>
@@ -116,7 +116,7 @@
             fetch(url)
         .then(res => res.json())
         .then(data => {
-            console.log("Weather Data:", data);
+            // console.log("Weather Data:", data);
             
             weather.innerHTML = `
                 <h1 class='text-center'>${data.name}</h1>
